WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80849
Fix an enumeration name in ReasonsFrameCannotBeInPageCache.
https://bugs.webkit.org/show_bug.cgi?id=80849
Summary
Fix an enumeration name in ReasonsFrameCannotBeInPageCache.
Gavin Peters
Reported
2012-03-12 09:21:11 PDT
Fix an enumeration name in ReasonsFrameCannotBeInPageCache.
Attachments
Patch
(1.87 KB, patch)
2012-03-12 09:23 PDT
,
Gavin Peters
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Peters
Comment 1
2012-03-12 09:23:02 PDT
Created
attachment 131335
[details]
Patch
Gavin Peters
Comment 2
2012-03-12 09:23:50 PDT
Whoops.
Gavin Peters
Comment 3
2012-03-12 12:34:44 PDT
+beidson for review, he indicated interest in Histogram changes. Given the (in)significance of this change, I'll cq+ once I have a single r+.
WebKit Review Bot
Comment 4
2012-03-13 07:58:12 PDT
Comment on
attachment 131335
[details]
Patch Clearing flags on attachment: 131335 Committed
r110561
: <
http://trac.webkit.org/changeset/110561
>
WebKit Review Bot
Comment 5
2012-03-13 07:58:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug