third_party/WebKit/Source/WebCore/history/PageCache.cpp
@@ -77,7 +77,7 @@ enum ReasonFrameCannotBeInPageCache {
     QuickRedirectComing,
     IsLoadingInAPISense,
     IsStopping,
-    CanSuspendActiveDOMObjects,
+    CannotSuspendActiveDOMObjects,
     DocumentLoaderUsesApplicationCache,
     ClientDeniesCaching,
     NumberOfReasonsFramesCannotBeInPageCache,
@@ -160,7 +160,7 @@ static unsigned logCanCacheFrameDecision(Frame* frame, int indentLevel)
         }
         if (!frame->document()->canSuspendActiveDOMObjects()) {
             PCLOG("   -The document cannot suspect its active DOM Objects");
-            rejectReasons |= 1 << CanSuspendActiveDOMObjects;
+            rejectReasons |= 1 << CannotSuspendActiveDOMObjects;
         }
         if (!frame->loader()->documentLoader()->applicationCacheHost()->canCacheInPageCache()) {
             PCLOG("   -The DocumentLoader uses an application cache");
